--- a/frost-coordinator/Cargo.toml
+++ b/frost-coordinator/Cargo.toml
@@ -1,11 +1,9 @@
 [package]
-name = "frost-signer"
-version = "0.0.1"
+name = "frost-coordinator"
+version = "0.1.0"
 edition = "2021"
 
-[lib]
-path = "src/lib.rs"    # The source file of the target.
-crate-type = ["lib"]   # The crate types to generate.
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 backoff = "0.4"
@@ -23,3 +21,4 @@ toml = "0.5.9"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 ureq = { version = "2.6", features = [] }
+frost-signer = { version = "0.0.1", path = "../frost-signer" }
