--- a/frost-signer/Cargo.toml
+++ b/frost-signer/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
 name = "frost-signer"
 version = "0.0.1"
+license = "GPLv3"
+homepage = "https://github.com/Trust-Machines/core-eng"
+repository = "https://github.com/Trust-Machines/core-eng"
 edition = "2021"
 
 [lib]
