--- a/frost-coordinator/Cargo.toml
+++ b/frost-coordinator/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
 name = "frost-coordinator"
-version = "0.1.0"
+version = "0.0.1"
+license = "GPLv3"
+homepage = "https://github.com/Trust-Machines/core-eng"
+repository = "https://github.com/Trust-Machines/core-eng"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
