--- a/frost-test/Cargo.toml
+++ b/frost-test/Cargo.toml
@@ -14,3 +14,4 @@ rand_core = "0.5"
 hashbrown = "0.13"
 frost = { git = "https://github.com/trust-machines/frost", rev = "8e188c271213e291e321b8aeda6273c054d25264" }
 p256k1 = { version = "1.0" }
+num-traits = { version = "0.2" }
