--- a/frost-test/Cargo.toml
+++ b/frost-test/Cargo.toml
@@ -13,4 +13,5 @@ frost-signer = { path = "../frost-signer" }
 rand_core = { workspace = true }
 hashbrown = { workspace = true }
 wtfrost = { workspace = true }
-bitcoin = "0.29.2"
+bitcoin = { version = "0.29.2", features = ["rand"] }
+
