--- a/frost-test/Cargo.toml
+++ b/frost-test/Cargo.toml
@@ -14,4 +14,5 @@ rand_core = { workspace = true }
 hashbrown = { workspace = true }
 wtfrost = { workspace = true }
 bitcoin = { version = "0.29.2", features = ["rand"] }
+hex = "0.4.3"
 
