move HTTP to yarpc

--- a/frost-test/Cargo.toml
+++ b/frost-test/Cargo.toml
@@ -8,6 +8,7 @@ license = "GPLv3"
 
 [dependencies]
 relay-server = { path = "../relay-server" }
+yarpc = { path = "../yarpc" }
 rand_core = { workspace = true }
 hashbrown = { workspace = true }
 wtfrost = { workspace = true }
