--- a/frost-test/Cargo.toml
+++ b/frost-test/Cargo.toml
@@ -15,4 +15,6 @@ hashbrown = { workspace = true }
 wtfrost = { workspace = true }
 bitcoin = { version = "0.29.2", features = ["rand"] }
 hex = "0.4.3"
+ctrlc = "3.2.5"
+nix = "0.26.2"
 
