--- a/stacks-signer/Cargo.toml
+++ b/stacks-signer/Cargo.toml
@@ -10,6 +10,7 @@ clap = { workspace = true }
 frost-signer = { path = "../frost-signer" }
 rand_core = "0.6"
 serde = { workspace = true }
+thiserror = { workspace = true }
 toml = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
