--- a/stacks-coordinator/Cargo.toml
+++ b/stacks-coordinator/Cargo.toml
@@ -11,10 +11,12 @@ edition = "2021"
 [dependencies]
 blockstack-core = { workspace = true }
 clap = { workspace = true }
+frost-coordinator = { path = "../frost-coordinator" }
 frost-signer = { path = "../frost-signer" }
 rusqlite = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+stacks-signer = { path = "../stacks-signer" }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 thiserror = { workspace = true }
