--- a/frost-signer/conf/stacker.toml
+++ b/frost-signer/conf/stacker.toml
@@ -1,10 +1,7 @@
-[common]
+[config]
 stacks_node_url = "http://localhost:9776"
 total_signers = 3
 total_parties = 6
 minimum_parties = 4
-
-[signer]
-frost_id = 1
-frost_state_file = "frost.state.bin"
+max_party_id = 3
 
