stub out minedoc and its readme

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ members = [
   "frost-coordinator",
   "stacks-coordinator",
   "stacks-signer",
-  "yarpc"]
+  "yarpc",
+  "minedoc"]
 
 [workspace.dependencies]
 base58 = "0.2"
