--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ members = [
 [workspace.dependencies]
 base58 = "0.2"
 blockstack-core = { git = "https://github.com/stacks-network/stacks-blockchain/", branch = "3493-sbtc-peg-out-wire-format" }
-clap = { version = "4.1.1", features = ["derive"] }
+clap = { version = "4.1.1", features = ["derive", "env"] }
 wtfrost = { git = "https://github.com/Trust-Machines/frost", branch = "main" }
 rusqlite = "0.24.2"
 serde = { version = "1.0", features = ["derive"] }
