--- a/stacks-signer/Cargo.toml
+++ b/stacks-signer/Cargo.toml
@@ -11,7 +11,7 @@ frost-signer = { path = "../frost-signer" }
 rand_core = "0.6"
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
-wtfrost = "3.0"
+wtfrost = { workspace = true }
 
 [dev-dependencies]
 assert_cmd = "2.0.8"
