--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ members = [
 [workspace.dependencies]
 blockstack-core = { git = "https://github.com/stacks-network/stacks-blockchain/", branch = "3493-sbtc-peg-out-wire-format" }
 clap = { version = "4.1.1", features = ["derive"] }
-wtfrost = { git = "https://github.com/Trust-Machines/frost", branch = "main" }
+#wtfrost = { git = "https://github.com/Trust-Machines/frost", branch = "main" }
+wtfrost = { path = "../frost" }
 rusqlite = "0.24.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
