--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -55,6 +55,7 @@ jobs:
       run: cargo test --verbose --locked ${{matrix.type}}
 
   fmt:
+    needs: install
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -62,6 +63,7 @@ jobs:
       run: cargo fmt --check
 
   clippy:
+    needs: install
     name: clippy
     runs-on: ubuntu-latest
     steps:
