--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - run: curl -o bitcoin-22.0-x86_64-linux-gnu.tar.gz https://bitcoincore.org/bin/bitcoin-core-22.0/bitcoin-22.0-x86_64-linux-gnu.tar.gz
+    - run: tar xzf bitcoin-22.0-x86_64-linux-gnu.tar.gz
+    - run: sudo install -m 0755 -o root -g root -t /usr/local/bin bitcoin-22.0/bin/*
 
   build:
     needs: install
