--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,11 +11,12 @@ env:
 
 jobs:
   install:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+    runs-on: ${{matrix.os}}
     steps:
-    - run: curl -o bitcoin-22.0-x86_64-linux-gnu.tar.gz https://bitcoincore.org/bin/bitcoin-core-22.0/bitcoin-22.0-x86_64-linux-gnu.tar.gz
-    - run: tar xzf bitcoin-22.0-x86_64-linux-gnu.tar.gz
-    - run: sudo install -m 0755 -o root -g root -t /usr/local/bin bitcoin-22.0/bin/*
+    - run: ./.install/ubuntu-latest.sh
     - uses: denoland/setup-deno@v1
       with:
         deno-version: v1.*
