--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,21 +10,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  install:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest]
-    runs-on: ${{matrix.os}}
-    steps:
-    - uses: actions/checkout@v3
-    - run: ./.install/bitcoin.sh
-    - uses: denoland/setup-deno@v1
-      with:
-        deno-version: v1.*
-    - run: cargo test --verbose --release
-
   build:
-    needs: install
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -43,8 +29,7 @@ jobs:
     strategy:
       matrix:
         # can't run on `windows-latests`
-        # os: [ubuntu-latest, macos-latest]
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, macos-latest]
         type: ['', '--release']
     runs-on: ${{matrix.os}}
     steps:
@@ -52,6 +37,9 @@ jobs:
       with:
         deno-version: v1.*
     - uses: actions/checkout@v3
+    # Install a specific version of Bitcoin
+    - run: ./.install/bitcoin.sh
+    - run: bitcoind --version
     # We need to cache JS script dependencies before running `cargo test`.
     # The `cargo test` command may spawn multiple `deno` processes.
     - uses: actions/download-artifact@v3
