--- a/stacks-doctor/Cargo.toml
+++ b/stacks-doctor/Cargo.toml
@@ -10,3 +10,4 @@ clap.workspace = true
 reqwest = { workspace = true, features = ["blocking", "json"] }
 serde_json.workspace = true
 rusqlite.workspace = true
+anyhow = "1.0.70"
