Feature: pulled Judes sbtc-mini contract in from his repo, tidied up the clarity and setup Clarinet tests.

--- a/sbtc-mini/Clarinet.toml
+++ b/sbtc-mini/Clarinet.toml
@@ -1,20 +1,24 @@
 
 [project]
 name = "sbtc-mini"
+description = ""
 authors = []
-telemetry = false
+telemetry = true
+cache_dir = "./.cache"
+
+[contracts.sbtc-mini]
+path = 'contracts/sbtc-mini.clar'
+clarity_version = 2
+epoch = 2.1
+
 [repl.analysis]
 passes = ["check_checker"]
-[repl.analysis.check_checker]
-# If true, inputs are trusted after tx_sender has been checked.
-trusted_sender = false
-# If true, inputs are trusted after contract-caller has been checked.
-trusted_caller = false
-# If true, untrusted data may be passed into a private function without a
+check_checker = { trusted_sender = false, trusted_caller = false, callee_filter = false }
+
+# Check-checker settings:
+# trusted_sender: if true, inputs are trusted after tx_sender has been checked.
+# trusted_caller: if true, inputs are trusted after contract-caller has been checked.
+# callee_filter: if true, untrusted data may be passed into a private function without a
 # warning, if it gets checked inside. This check will also propagate up to the
 # caller.
-callee_filter = false
-
-# [contracts.counter]
-# path = "contracts/counter.clar"
-# depends_on = []
+# More informations: https://www.hiro.so/blog/new-safety-checks-in-clarinet
