--- a/.github/workflows/clarinet.yml
+++ b/.github/workflows/clarinet.yml
@@ -26,10 +26,20 @@ jobs:
       - name: Install clarinet
         run: chmod +x ./bin/install_clarinet_acton.sh && ./bin/install_clarinet_acton.sh
 
-      - name: Run clarinet check
+      - name: Run clarinet check for sbtc-ops
         working-directory: ./sbtc-ops/clarinet
         run: clarinet check
 
-      - name: Run clarinet test
+      - name: Run clarinet test for sbtc-ops
         working-directory: ./sbtc-ops/clarinet
         run: clarinet test
+
+      - name: Run unit tests for sbtc-mini
+        working-directory: ./sbtc-mini
+        run: ./scripts/test.sh
+
+      - name: "Export sbtc-mini code coverage"
+        uses: codecov/codecov-action@v1
+        with:
+          files: .coverage/lcov.info
+          verbose: true
