fix CodeFactor issue, rename Clarinet GH Action
Signed-off-by: MarvinJanssen <MarvinJanssen@users.noreply.github.com>

--- a/.github/workflows/clarinet.yml
+++ b/.github/workflows/clarinet.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   check:
-    name: Clarinet check for sbtc-ops
+    name: Clarinet check for sbtc-ops and sbtc-mini
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
