--- a/.github/workflows/clarinet.yml
+++ b/.github/workflows/clarinet.yml
@@ -33,3 +33,31 @@ jobs:
       - name: Run clarinet test
         working-directory: ./sbtc-ops/clarinet
         run: clarinet test
+        
+  check-mini-clarinet:
+    name: Clarinet check for sbtc-mini
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
+
+      - name: Install Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          profile: minimal
+          components: rustfmt
+          override: true
+
+      - name: Install clarinet
+        run: chmod +x ./bin/install_clarinet_acton.sh && ./bin/install_clarinet_acton.sh
+
+      - name: Run clarinet check
+        working-directory: ./sbtc-mini/
+        run: clarinet check
+
+      - name: Run clarinet test
+        working-directory: ./sbtc-mini
+        run: clarinet test
