--- a/.github/workflows/clarinet.yml
+++ b/.github/workflows/clarinet.yml
@@ -55,7 +55,7 @@ jobs:
         run: chmod +x ./bin/install_clarinet_acton.sh && ./bin/install_clarinet_acton.sh
 
       - name: Run clarinet check
-        working-directory: ./sbtc-mini/
+        working-directory: ./sbtc-mini
         run: clarinet check
 
       - name: Run clarinet test
