--- a/frost-signer/conf/signer.toml
+++ b/frost-signer/conf/signer.toml
@@ -1,11 +1,10 @@
-http_relay_url = "http://localhost:9776
+http_relay_url = "http://localhost:9776"
 keys_threshold = 4
 frost_state_file = "frost.state.bin"
 network_private_key = "9aSCCR6eirt1NAHwJtSz4HMwBHTyMo62SyPMvVDt5DQn"
 signers =  [
-    {public_key: "22Rm48xUdpuTuva5gz9S7yDaaw9f8sjMcPSTHYVzPLNcj", key_ids: [1, 2]},
-    {public_key: "22Rm48xUdpuTuva5gz9S7yDaaw9f8sjMcPSTHYVzPLNcj", key_ids: [3, 4]},
-    {public_key: "22Rm48xUdpuTuva5gz9S7yDaaw9f8sjMcPSTHYVzPLNcj", key_ids: [5, 6]}
-    ]
+    {public_key = "22Rm48xUdpuTuva5gz9S7yDaaw9f8sjMcPSTHYVzPLNcj", key_ids = [1, 2]},
+    {public_key = "22Rm48xUdpuTuva5gz9S7yDaaw9f8sjMcPSTHYVzPLNcj", key_ids = [3, 4]},
+    {public_key = "22Rm48xUdpuTuva5gz9S7yDaaw9f8sjMcPSTHYVzPLNcj", key_ids = [5, 6]}
+]
 coordinator_public_key = "22Rm48xUdpuTuva5gz9S7yDaaw9f8sjMcPSTHYVzPLNcj"
-
