--- a/test-utils/Cargo.toml
+++ b/test-utils/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 ureq = { workspace = true }
 bitcoin = { version = "0.29.2", features = ["rand"] }
+blockstack-core = { workspace = true }
 ctrlc = "3.2.5"
 nix = "0.26.2"
 libc = "0.2.139"
