--- a/commit-reveal-reference/Cargo.toml
+++ b/commit-reveal-reference/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 
 [dependencies]
 bitcoin.workspace = true
+blockstack-core.workspace = true
+secp256k1 = { version="0.27.0", features=["global-context", "recovery"] }
