--- a/commit-reveal-reference/Cargo.toml
+++ b/commit-reveal-reference/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+array-bytes = "6.0.0"
 bitcoin.workspace = true
 blockstack-core.workspace = true
 secp256k1 = { version="0.27.0", features=["global-context", "recovery"] }
