--- a/stacks-signer-api/Cargo.toml
+++ b/stacks-signer-api/Cargo.toml
@@ -12,6 +12,7 @@ tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+utoipa = "3.3.0"
 warp = "0.3.5"
 dotenv = "0.15.0"
 
