WIP: add dummy amounts to the database
Signed-off-by: Jacinta Ferrant <jacinta@trustmachines.co>

--- a/stacks-signer-api/Cargo.toml
+++ b/stacks-signer-api/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+blockstack-core.workspace = true
 clap.workspace = true
+hex.workspace = true
 rand.workspace = true
 serde.workspace = true
 serde_json.workspace = true
