--- a/stacks-signer-api/Cargo.toml
+++ b/stacks-signer-api/Cargo.toml
@@ -17,6 +17,7 @@ thiserror.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 utoipa = "3.3.0"
+utoipa-swagger-ui = { version = "3.1.3" }
 warp = "0.3.5"
 dotenv = "0.15.0"
 
