--- a/stacks-signer-api/Cargo.toml
+++ b/stacks-signer-api/Cargo.toml
@@ -4,8 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow.workspace = true
 clap.workspace = true
 hex.workspace = true
+parse-display = "0.8.1"
 rand.workspace = true
 serde.workspace = true
 serde_json.workspace = true
