--- a/sbtc-mini/Clarinet.toml
+++ b/sbtc-mini/Clarinet.toml
@@ -107,6 +107,11 @@ path = 'tests/sbtc-stacking-pool_test.clar'
 clarity_version = 2
 epoch = 2.1
 
+[contracts.sbtc-stacking-pool_flow_test]
+path = 'tests/sbtc-stacking-pool_flow_test.clar'
+clarity_version = 2
+epoch = 2.1
+
 [contracts.sbtc-btc-tx-helper_test]
 path = 'tests/sbtc-btc-tx-helper_test.clar'
 clarity_version = 2
