--- a/sbtc-mini/Clarinet.toml
+++ b/sbtc-mini/Clarinet.toml
@@ -50,6 +50,16 @@ path = 'contracts/sbtc-peg-out-processor.clar'
 clarity_version = 2
 epoch = 2.1
 
+[contracts.sbtc-peg-out-request-stx]
+path = 'contracts/sbtc-peg-out-request-stx.clar'
+clarity_version = 2
+epoch = 2.1
+
+[contracts.sbtc-peg-out-request-reclaim]
+path = 'contracts/sbtc-peg-out-request-reclaim.clar'
+clarity_version = 2
+epoch = 2.1
+
 [contracts.sbtc-registry]
 path = 'contracts/sbtc-registry.clar'
 clarity_version = 2
