--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,8 +22,8 @@ bitcoin = { version = "0.29.2", features = ["rand", "bitcoinconsensus"] }
 blockstack-core = { git = "https://github.com/stacks-network/stacks-blockchain/", branch = "next" }
 clap = { version = "4.1.1", features = ["derive", "env"] }
 hex = "0.4.3"
-p256k1 = "5.1"
-wsts = "1.2"
+p256k1 = "5.3"
+wsts = { git = "http://github.com/Trust-Machines/wsts", branch = "main" }
 rusqlite = "0.24.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", features = ["preserve_order"] }
