Add rustdoc enforcement to "mini" packages (#649)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ members = [
   "frost-coordinator",
   "sbtc-cli",
   "stacks-coordinator",
+  "stacks-coordinator-mini",
   "stacks-signer",
+  "stacks-signer-mini",
   "stacks-signer-api",
   "stacks-doctor",
   "test-utils",
