--- a/sbtc-mini/deployments/signer-5-prove-transfer.devnet-plan.yaml
+++ b/sbtc-mini/deployments/signer-5-prove-transfer.devnet-plan.yaml
@@ -9,10 +9,19 @@ plan:
     - id: 0
       transactions:
         - contract-call:
-            contract-id: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.sbtc-stacking-pool
+            contract-id: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.sbtc-peg-transfer
             expected-sender: ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
-            method: vote-for-threshold-wallet-candidate
+            method: relay-handoff-fulfillment
             parameters:
-              - "{version: 0x04, hashbytes: 0x6d78de7b0625dfbfc16c3a8a5735f6dc3dc3f2ce}"
+              - u2101
+              - 0x
+              - 0x
+              - u1
+              - u1
+              - "(list)"
+              - 0x
+              - 0x
+              - 0x
+              - "(list)"
             cost: 10000
       epoch: "2.4"
